Thumbnail en imágenes de publicación

--- a/FrameworksYLibreríasCSS_Andrés_Ibarra/Blog_comida_Foundation/index.html
+++ b/FrameworksYLibreríasCSS_Andrés_Ibarra/Blog_comida_Foundation/index.html
@@ -80,7 +80,7 @@
                 <article>
                     <h3>Cebollas Caramelizadas</h3>
                     <h5 class="subheader">20/Mar/2017</h5>
-                    <img src="resources/cebolla_caramelizada.png" alt="cebolla"/>
+                    <img src="resources/cebolla_caramelizada.png" class="thumbnail" alt="cebolla"/>
                     <div class="content">
                         <div class="panel">
                             <p>Prueba estas deliciosas cebollas caramelizadas para acompañar todos tu platillos desde un pannini gourmet hasta una carne.</p>
@@ -266,7 +266,7 @@
                 <article>
                     <h3>Camarones al café</h3>
                     <h5 class="subheader">1/Aug/2017</h5>
-                    <img src="resources/camaron.jpg" alt="camaron" />
+                    <img src="resources/camaron.jpg" class="thumbnail" alt="camaron" />
                     <div class="content">
                         <div class="panel">
                             <p>Esta receta de camarones al café es una idea diferente de preparar camarones y que mejor que usando café. Nunca te hubieras imaginado que el café y los camarones juntos pudieran tener tan buen sabor.</p>
