Iconos y fondo blog viajes
Se añade línea adicional de ícono de pestaña. Asignación de fondo para
el blog de viajes

--- a/FrameworksYLibreríasCSS_Andrés_Ibarra/Blog_comida_Foundation/index.html
+++ b/FrameworksYLibreríasCSS_Andrés_Ibarra/Blog_comida_Foundation/index.html
@@ -6,7 +6,8 @@
     <meta name="author" content="Andrés Mauricio Ibarra Guerrero" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0" />
-    <link rel="icon" href="resources/logo.svg" />
+    <link rel="icon" href="resources/logo.svg" type="image/svg"/>
+	<link rel="shortcut icon" href="resources/logo.svg" type="image/svg"/>
     <title>Gourmet</title>
     <link href="https://fonts.googleapis.com/css?family=Comfortaa|Dancing+Script" rel="stylesheet">
     <link rel="stylesheet" href="css/foundation.min.css" />
