--- a/FrameworksYLibreríasCSS_Andrés_Ibarra/Blog_música_Bootstrap/index.html
+++ b/FrameworksYLibreríasCSS_Andrés_Ibarra/Blog_música_Bootstrap/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-tofit=no" />
     <meta name="author" content="Andrés Mauricio Ibarra Guerrero" />
     <link rel="icon" href="resources/logo.svg" type="image/svg"/>
+	<link rel="shortcut icon" href="resources/logo.svg" type="image/svg"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.css" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Roboto" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
