--- a/FrameworksYLibreríasCSS_Andrés_Ibarra/Blog_viajes_Materialize/index.html
+++ b/FrameworksYLibreríasCSS_Andrés_Ibarra/Blog_viajes_Materialize/index.html
@@ -3,9 +3,17 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <link rel="icon" href="resources/logo_nomada.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="resources/logo_nomada.png" type="image/x-icon" />
+    <title>Nomada</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="css/main.css" />
 </head>
 <body>
-
+    <div class="background top-background teal accent-2"></div>
+    <div class="background background-image"></div>
+    <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/js/materialize.min.js"></script>
 </body>
 </html>
